typo error correction

--- a/education.html
+++ b/education.html
@@ -121,7 +121,20 @@
       <!--p><a href="https://tyleransom.github.io/teaching/EvalsSummary.pdf">Overall Summary of Teaching Evaluations</a></p-->
      
       <hr />
-      <h3>Economics</h3>
+      <h3>Economics & Policy</h3>
+      <h4><b>SE POL 400 Causal Methods for Evaluating Policy (Northwestern University, Spring 2024)</b></h4>
+      Master's course on causal infernece.
+      <ul>
+       <li>Instructor: <a href="https://sites.northwestern.edu/ofermalamud/">Prof. Ofer Malamud</a></li>
+      </ul>
+      <h4><b>SE POL 403 Policy Analysis using Advanced Methods (Northwestern University, Summer 2024)</b></h4>
+      <ul>
+       <li>Instructor: <a href="https://sites.northwestern.edu/michelleyin/">Prof. Michelle Yin</a>, <a href="https://sites.northwestern.edu/burhanogut1/">Dr. Burhan Ogut</a></li>
+      </ul>
+      <h4><b>SE POL 407 Social Policy in the United States (Northwestern University, Spring 2024)</b></h4>
+      <ul>
+       <li>Instructor: <a href="https://psychology.northwestern.edu/people/faculty/core/profiles/david-uttal.html">Prof. David Uttal</a></li>
+      </ul>
       <h4><b>Econ 5012: Microeconomic Analysis and Applications (The Chinese University of Hong Kong, Fall 2023)</b></h4>
       Master's course on Microeconomic theory.
       <ul>
@@ -166,7 +179,7 @@
        <!--li>Student course evaluations (<a href="https://tyleransom.github.io/teaching/EconometricsEvalsF18.pdf">Fall 2018</a>,<a href="https://tyleransom.github.io/teaching/EconometricsEvalsS19.pdf">Spring 2019</a>,<a href="https://tyleransom.github.io/teaching/EconometricsEvalsF19.pdf">Fall 2019</a>,<a href="https://tyleransom.github.io/teaching/EconometricsEvalsS20.pdf">Spring 2020</a>,<a href="https://tyleransom.github.io/teaching/EconometricsEvalsF20.pdf">Fall 2020</a>,<a href="https://tyleransom.github.io/teaching/EconometricsEvalsS21.pdf">Spring 2021</a>,<a href="https://tyleransom.github.io/teaching/EconometricsEvalsF21.pdf">Fall 2021</a>,<a href="https://tyleransom.github.io/teaching/EconometricsEvalsS22.pdf">Spring 2022</a>)</li-->
        <!--li>Other course materials available upon request</li-->
       </ul>
-      <h4><b>06234900: Speclal Topics on Chinese Economy (Peking University, Fall 2021)</b></h4>
+      <h4><b>06234900: Special Topics on Chinese Economy (Peking University, Fall 2021)</b></h4>
       "Speclal Topics on Chinese Economy"is a course aimed at buiding up capablly of analyzing economic reatilty--especialythe realy of chinese economy--through economic theories. Classical macroeconomc and financial models wll be introduced in the course, to help students to see through the real word problems, and to understand the economic insight behind the reality.
       <ul>
        <li>Instructor: <a href="http://scholar.pku.edu.cn/yflin/bio">Prof. Justin Yifu Lin</a></li>
@@ -238,10 +251,9 @@
         <li>Instructor: <a href="https://www.cueb.edu.cn/xxgk/szdw/xzfc/sjjs/81cbf562ff5141529d68ed37d602b7a0.htm">Prof. Ruan Jing</a></li>
         <!--li><a href="https://ssri.duke.edu/people/ehd-scholars">Students</a></li-->
       </ul>
-      <h4>Duke Data+ Project Mentor (Summer 2016)</h4>
+      <h4>SE POL 408 Applied Data Science (Northwestern University,Summer 2024)</h4>
       <ul>
-        <li>Mentored two students on analyzing North Carolina state budget data</li>
-        <li>Project details <a href="http://bigdata.duke.edu/projects/nc-budget-data-and-policy">here</a>.</li>
+        <li>Instructor: <a href="https://sites.northwestern.edu/burhanogut1/">Dr. Burhan Ogut, </a><a href="https://sesp.northwestern.edu/people/faculty/ruhan-circi.html">Dr. Ruhan Circi Kizil</a></li>
       </ul>
       
       <hr />
