--- a/education.html
+++ b/education.html
@@ -126,27 +126,34 @@
       Master's course on causal infernece.
       <ul>
        <li>Instructor: <a href="https://sites.northwestern.edu/ofermalamud/">Prof. Ofer Malamud</a></li>
+       <li>Textbook: Angrist, Joshua and Jorn-Steffen Pischke. 2009. Mostly Harmless Econometrics; Cunningham, Scott. Causal inference: The mixtape. Yale university press, 2021; Stock and Watson, Introduction to Econometrics.</li>
       </ul>
       <h4><b>SE POL 403 Policy Analysis using Advanced Methods (Northwestern University, Summer 2024)</b></h4>
       <ul>
        <li>Instructor: <a href="https://sites.northwestern.edu/michelleyin/">Prof. Michelle Yin</a>, <a href="https://sites.northwestern.edu/burhanogut1/">Dr. Burhan Ogut</a></li>
+       <li>Reference book: Khandker, S. R., Koolwal, G. B., & Samad, H. A. (2009). Handbook on impact evaluation: quantitative methods and practices. World Bank Publications.; Gertler, P. J., Martinez, S., Premand, P., Rawlings, L. B., & Vermeersch, C. M. (2016). Impact evaluation in practice. World Bank Publications.</li>
       </ul>
       <h4><b>SE POL 407 Social Policy in the United States (Northwestern University, Spring 2024)</b></h4>
       <ul>
        <li>Instructor: <a href="https://psychology.northwestern.edu/people/faculty/core/profiles/david-uttal.html">Prof. David Uttal</a></li>
+       <li>Textbook: Bardach, E., & Patashnik, E. M. (2023). A practical guide for policy analysis: The eightfold path to more effective problem solving. CQ press</li>
       </ul>
       <h4><b>SE POL 410 Economics of Education (Northwestern University, Summer 2024)</b></h4>
       <ul>
        <li>Instructor: <a href="https://sites.northwestern.edu/ogawa/">Prof. Scott Ogawa</a></li>
+       <li>Textbook: Economics of Education, Lovenheim and Turner</li>
       </ul>
       <h4><b>SE POL 401 Economics of Public Policy (Northwestern University, Summer 2024)</b></h4>
       <ul>
        <li>Instructor: <a href="https://sites.northwestern.edu/alexisarellano/">Prof. Alexis Orellana</a></li>
+       <li>Textbook: Angrist, Joshua and Jorn-Steffen Pischke. 2009. Mostly Harmless Econometrics</li>
       </ul>
       <h4><b>Econ 5012: Microeconomic Analysis and Applications (The Chinese University of Hong Kong, Fall 2023)</b></h4>
       Master's course on Microeconomic theory.
       <ul>
        <li>Instructor: <a href="https://www.econ.cuhk.edu.hk/econ/en-gb/people/faculty?view=faculty&id=ceshi">Prof. Shi Ce, Matthew</a></li>
+       <li>Textbook: Microeconomic Analysis, by Hal Varian, 3rd edition</li>
+       <li>Further Reading: Varian, Hal (2014). Intermediate Microeconomics, 9th edition, Norton; Kreps, David (1990). A Course in Microeconomic Theory, Princeton U. Press</li>
        <!--li><a href="https://www.amazon.com/Economics-Education-Michael-Lovenheim/dp/0716777045">Textbook</a></li-->
        <!--li><a href="https://tyleransom.github.io/research/LectureCollegeMajorChoiceCh15p2.pdf">xxx</a></li-->
        <!--li><a href="https://tyleransom.github.io/research/TenPrinciplesOfEconOfEd.pdf">10 Principles of the Economics of Education</a></li-->
@@ -157,6 +164,7 @@
       Master's course on macroeconomics.
       <ul>
        <li>Instructor: <a href="https://www.econ.cuhk.edu.hk/econ/en-gb/people/faculty?view=faculty&id=kcmok">Dr. MOK Kai Chung, Wallace</a></li>
+       <li>Reference book: Advanced Macroeconomics, by David Romer, McGraw-Hill/Irwin; Intermediate Macroeconomics, by Eric Sims, Julio Garin, Robert Lester; Recursive Macroeconomic Theory, by Lars Ljungqvist, Thomas J. Sargent, MIT Press; Applied Computational Economics and Finance, by Mario J. Miranda and Paul L. Fackler</li>
        <!--li>Course GitHub repository (<a href="https://github.com/tyleransom/DScourseS18">Spring 2018</a>,<a href="https://github.com/tyleransom/DScourseS19">Spring 2019</a>,<a href="https://github.com/tyleransom/DScourseS20">Spring 2020</a>,<a href="https://github.com/tyleransom/DScourseS21">Spring 2021</a>,<a href="https://github.com/tyleransom/DScourseS22">Spring 2022</a>,<a href="https://github.com/tyleransom/DScourseS23">Spring 2023</a>)</li-->
        <!--li>Student course evaluations (<a href="https://tyleransom.github.io/teaching/DSevalsS18.pdf">Spring 2018</a>,<a href="https://tyleransom.github.io/teaching/DSevalsS19.pdf">Spring 2019</a>,<a href="https://tyleransom.github.io/teaching/DSevalsS20.pdf">Spring 2020</a>,<a href="https://tyleransom.github.io/teaching/DSevalsS21.pdf">Spring 2021</a>,<a href="https://tyleransom.github.io/teaching/DSevalsS22.pdf">Spring 2022</a>,<a href="https://tyleransom.github.io/teaching/DSevalsS23.pdf">Spring 2023</a>)</li-->
       </ul>
@@ -164,21 +172,25 @@
       Master's course on advanced topics in applied econometrics.
       <ul>
         <li>Instructor: <a href="https://www.econ.cuhk.edu.hk/econ/en-gb/people/faculty?view=faculty&id=mzli">Prof. Li Zhen Merrick</a></li>
+        <li>Textbook: Angrist, Joshua and Jorn-Steffen Pischke. 2009. Mostly Harmless Econometrics; Cameron, Colin and Pravin Trivedi. 2009. Microeconometrics Using Stata</li>
       </ul>
       <h4><b>Econ5542: Analysis of Fiscal and Monetary Policy in China (The Chinese University of Hong Kong, Spring 2024)</b></h4>
       This graduate course includes two parts. The first part provides elementary monetary and fiscal policy theories providing students a general framework for policy analysis. The second part mainly discusses the development of Chinese monetary policy and fiscal policy in the past three decades, the potential policy reform, and its implications for the Chinese economy.
       <ul>
         <li>Instructor: <a href="https://kangshi99.weebly.com/">Prof. Kang Shi</a></li>
+        <li>Reference book: M. Woodford, Interest and Prices, Princeton University Press, 2003; C. Walsh, Monetary Theory and Policy (4th Edition), MIT Press, 2017</li>
       </ul>
       <h4><b>Econ5831: Special Topics in Economics II- China Financial Markets (The Chinese University of Hong Kong, Fall 2023)</b></h4>
       Master's course aims to provide an in-depth coverage of the financial system in China.
       <ul>
         <li>Instructor: <a href="https://www.econ.cuhk.edu.hk/econ/en-gb/people/faculty?view=faculty&id=shulin">Prof. Shu Lin</a></li>
+        <li>Reference book: Arcand, Jean Louis, Enrico Berkes and Ugo Panizza. 2015. Too Much Finance? Journal of Economic Growth 20: 105-148.; Demirgüç-Kunt, Asli, and Vojislav Maksimovic. 1998. Law, finance, and firm growth. Journal of Finance 53 (6): 2107-2137.</li>
       </ul>
       <h4><b>02802190: Chinese Economy (Peking University, Fall 2021)</b></h4>
       Undergraduate introduction to Chinese Economy.
       <ul>
        <li>Instructor: <a href="https://www.gsm.pku.edu.cn/faculty/zhoula/">Prof. Zhou Li-An</a>, <a href="https://www.gsm.pku.edu.cn/faculty/jackie.wang/">Prof. Wang Hui</a>, <a href="https://www.gsm.pku.edu.cn/jsjjxq.jsp?urltype=tree.TreeTempUrl&wbtreeid=1141&user_id=ytang">Prof. Tang Yao</a></li>
+       <li>Reference book: Li, H., & Zhou, L. A. (2005). Political turnover and economic performance: the incentive role of personnel control in China. Journal of public economics, 89(9-10), 1743-1762.</li>
        <!--li><a href="http://urfie.net/">Secondary Textbook</a></li-->
        <!--li><a href="http://r4ds.had.co.nz/">Additional Secondary Textbook</a></li-->
        <!--li>Collection of <a href="https://tyleransom.github.io/econometricslabs.html">in-class group labs</a> to help students get hands-on experience coding with R</li-->
@@ -191,16 +203,19 @@
       "Speclal Topics on Chinese Economy" is a course aimed at buiding up capablly of analyzing economic reatilty--especialythe realy of chinese economy--through economic theories. Classical macroeconomc and financial models wll be introduced in the course, to help students to see through the real word problems, and to understand the economic insight behind the reality.
       <ul>
        <li>Instructor: <a href="http://scholar.pku.edu.cn/yflin/bio">Prof. Justin Yifu Lin</a></li>
+       <li>Textbook: 林毅夫. (2008). 中国经济专题. 北京大學出版社.</li>
       </ul>
       <h4><b>02832120: Macroeconomics (Peking University, Fall 2021)</b></h4>
       This course teaches macroeconomics at the intermediate level.
       <ul>
        <li>Instructor: <a href="https://www.gsm.pku.edu.cn/jsjjxq.jsp?urltype=tree.TreeTempUrl&wbtreeid=1141&user_id=seyan">Prof. Se Yan</a></li>
+       <li>Textbook: Mankiw, N. G. (2013). Macroeconomics fifth edition; <a href="https://books.google.com/books/about/%E5%AE%8F%E8%A7%82%E7%BB%8F%E6%B5%8E%E5%AD%A6%E4%B8%8E%E4%B8%AD%E5%9B%BD%E6%94%BF%E7%AD%96.html?id=KOf1zgEACAAJ">宏观经济学与中国政策</a></li>
       </ul>
       <h4><b>02833720: Econometrics (Peking University, Spring 2022)</b></h4>
       Bachelor's course on econometrics.
       <ul>
        <li>Instructor: <a href="https://www.gsm.pku.edu.cn/jsjjxq.jsp?urltype=tree.TreeTempUrl&wbtreeid=1141&user_id=yundong.tu">Prof. Yundong Tu</a></li>
+       <li>Textbook: Stock, J. H., Watson, M. W., Wooldridge, J. M., & Wooldridge, J. M. Introductory Econometrics: A Modern Approach (4th) International.</li>
       </ul>
       <h4><b>02839430: Development Economics (Peking University, Fall 2021)</b></h4>
       This course provides an overview of the most relevant topics and methods for understanding and practicing economic development.
@@ -279,11 +294,15 @@
       <h4 style="margin-top:6px">02812930 Python foundation for data science (Peking University, Fall 2021)</h4>
       <ul>
         <li>Instructor: <a href="https://www.cueb.edu.cn/xxgk/szdw/xzfc/sjjs/81cbf562ff5141529d68ed37d602b7a0.htm">Prof. Ruan Jing</a></li>
+        <li>Textbook: <a href="https://www.stats.gov.cn/zs/tjwh/tjkw/tjzl/202302/t20230215_1907867.html">Python数据分析基础</a></li>
         <!--li><a href="https://ssri.duke.edu/people/ehd-scholars">Students</a></li-->
       </ul>
       <h4>SE POL 408 Applied Data Science (Northwestern University,Summer 2024)</h4>
       <ul>
         <li>Instructor: <a href="https://sites.northwestern.edu/burhanogut1/">Dr. Burhan Ogut, </a><a href="https://sesp.northwestern.edu/people/faculty/ruhan-circi.html">Dr. Ruhan Circi Kizil</a></li>
+        <li>Textbook: An Introduction to Statistical Learning by James, Witten, Hastie, Tibshirani [JWHT]</li>
+        <li>Reference book: Data Science from Scratch: First Principles with Python, Joel Grus [JG]</li>
+        <li><a href="https://github.com/meteor0823/MachineLearning">Project</a>: House Price Prediction Model</li>
       </ul>
       
       <hr />
@@ -302,6 +321,7 @@
       <h4>ECON5102: Mathematics for Economics Analysis (The Chinese University of Hong Kong, Fall 2023)</h4>
       <ul>
         <li>Instructor: <a href="https://www.econ.cuhk.edu.hk/econ/en-gb/people/faculty/regular-faculty?view=faculty&id=dzli" target="_blank">Prof. Li Duozhe</a></li>
+        <li>Textbook:  Carl P. Simon and Lawrence Blume, Mathematics for Economists, Norton, 1994.; Alpha C. Chiang and Kevin Wainwright, Fundamental Methods of Mathematical Economics, McGraw-Hill, 2005.</li>
       </ul>
       <h4>MATH1002: Linear Algebra (The University of Sydney, Spring 2022)</h4>
       <ul>
