--- a/education.html
+++ b/education.html
@@ -122,6 +122,12 @@
      
       <hr />
       <h3>Economics & Policy</h3>
+      <h4><b>SE POL 418 Economics of Immigration and Welfare (Northwestern University, Fall 2024)</b></h4>
+      <ul>
+       <li>Instructor: <a href="https://sites.northwestern.edu/hoavu/hoavu/">Dr. Hoa Vu</a></li>
+      <h4><b>SE POL 420 Applied Public Finance (Northwestern University, Fall 2024)</b></h4>
+      <ul>
+       <li>Instructor: <a href="https://sesp.northwestern.edu/people/faculty/derek-drayer.html">Mr. Derek Drayer</a></li>
       <h4><b>SE POL 400 Causal Methods for Evaluating Policy (Northwestern University, Spring 2024)</b></h4>
       Master's course on causal infernece.
       <ul>
@@ -252,6 +258,7 @@
       <h4>FINC3012: Derivative Securities (The University of Sydney, Fall 2022)</h4>
       <ul>
         <li>Instructor: <a href="https://www.sydney.edu.au/business/about/our-people/academic-staff/elvis.jarnecic.html">Dr. Elvis Jarnecic</a></li>
+        <li>Textbook: John C. Hull; Options, Futures, and Other Derivatives 9th Edition</li>
       </ul>
       <h4>BANK3011: Bank Financial Management (The University of Sydney, Fall 2022)</h4>
       <ul>
