--- a/education.html
+++ b/education.html
@@ -128,7 +128,7 @@
       </ul>
       <h4><b>SE POL 420 Applied Public Finance (Northwestern University, Fall 2024)</b></h4>
       <ul>
-       <li>Instructor: <a href="https://sesp.northwestern.edu/people/faculty/derek-drayer.html">Mr. Derek Drayer</a></li>
+       <li>Instructor: <a href="https://sesp.northwestern.edu/people/faculty/derek-drayer.html">Dr. Derek Drayer</a></li>
       </ul>
       <h4><b>SE POL 400 Causal Methods for Evaluating Policy (Northwestern University, Spring 2024)</b></h4>
       Master's course on causal infernece.
