add math textbok

--- a/education.html
+++ b/education.html
@@ -271,22 +271,26 @@
       <h3 style="margin-bottom:6px margin-top:6px">Math</h3>
       <h4>ECON5102: Mathematics for Economics Analysis (The Chinese University of Hong Kong, Fall 2023)</h4>
       <ul>
+        <li>This course reviews some of the mathematical methods most widely used in modern economic analysis, including linear algebra, elementary real analysis, multivariable differential calculus, theory of optimization with constraints, dynamical systems in discrete and continuous times.</li>
         <li>Instructor: <a href="https://www.econ.cuhk.edu.hk/econ/en-gb/people/faculty/regular-faculty?view=faculty&id=dzli" target="_blank">Prof. Li Duozhe</a></li>
-        <li>Textbook:  Carl P. Simon and Lawrence Blume, Mathematics for Economists, Norton, 1994.; Alpha C. Chiang and Kevin Wainwright, Fundamental Methods of Mathematical Economics, McGraw-Hill, 2005.</li>
+        <li>Textbook: Carl P. Simon and Lawrence Blume, Mathematics for Economists, Norton, 1994.; Alpha C. Chiang and Kevin Wainwright, Fundamental Methods of Mathematical Economics, McGraw-Hill, 2005.</li>
       </ul>
       <h4>MATH1002: Linear Algebra (The University of Sydney, Spring 2022)</h4>
       <ul>
         <li>Earned high distinction</li>
         <li>Instructor: <a href="https://www.sydney.edu.au/science/about/our-people/academic-staff/anne.thomas.html" target="_blank">Prof. Anne Thomas</a></li>
+        <li>Textbook: David Poole, Linear Algebra: A Modern Introduction 4th Edition</li>
       </ul>
       <h4>MATH1021: Calculus of One Variable (The University of Sydney, Spring 2022)</h4>
       <ul>
         <li>Instructor: <a href="https://www.sydney.edu.au/science/about/our-people/academic-staff/mary.myerscough.html" target="_blank">Prof. Mary Myerscough</a></li>
+        <li>Textbook: James Stewart. Calculus. Cengage Learning. 8th Edition, Metric Version, 2015</li>
       </ul>
       <h4>BUSS1020: Quantitative Business Analysis (The University of Sydney, Fall 2019)</h4>
       <ul>
         <li>Earned the recommendation letter</li>
         <li>Instructor: <a href="https://www.sydney.edu.au/business/about/our-people/academic-staff/steven-sommer.html" target="_blank">Dr. Steven Sommer</a></li>
+        <li>Textbook: Mark Berenson, David Levine, Kathryn Szabat. Basic Business Statistics: Concepts and Applications, 14th Edition</li>
       </ul>
 
       <hr />
