add some textbooks

--- a/education.html
+++ b/education.html
@@ -307,10 +307,12 @@
       <h4>BANK3011: Bank Financial Management (The University of Sydney, Fall 2022)</h4>
       <ul>
         <li>Instructor: <a href="https://www.sydney.edu.au/business/about/our-people/academic-staff/haekwon.lee.html">Dr. Haekwon Lee</a></li>
+        <li>Textbook: Anthony Saunders, Marcia Cornett and Otgo Erhemjamts, Financial Institutions Management: A Risk Management Approach, 10th Edition</li>
       </ul>
       <h4>FINC2011: Corporate Finance I (The University of Sydney, Fall 2020)</h4>
       <ul>
         <li>Instructor: <a href="https://www.sydney.edu.au/business/about/our-people/academic-staff/danilo-lopomobeteto.html">Dr. Danilo Lopomo Beteto</a>, <a href="https://www.linkedin.com/in/laievelyn/?originalSubdomain=au">Dr. Evelyn Lai</a></li>
+        <li>Textbook: Richard Brealey, Stewart Myers, Alex Edmans and Franklin Allen, Principles of Corporate Finance, 14th Edition</li>
       </ul>
       <h4>FINC2012: Corporate Finance II (Shanghai Jiao Tong University, Winter 2019)</h4>
       <ul>
@@ -322,22 +324,27 @@
       <h4>ACCT3011 Financial Accounting B (The University of Sydney, Spring 2022)</h4>
       <ul>
         <li>Instructor: <a href="https://www.sydney.edu.au/business/about/our-people/academic-staff/c-yu.html">Dr. Chuan Yu</a></li>
+        <li>Textbook: Neal Arthur; Louise Luff; Peter Keet; Matt Egan; Bryan Howieson; Ronita Ram, Accounting for Corporate Combinations and Associations 8th Edition</li>
       </ul>
       <h4>ACCT2019 Management Accounting (The University of Sydney, Spring 2021)</h4>
       <ul>
         <li>Instructor: <a href="https://www.sydney.edu.au/business/about/our-people/academic-staff/ravi-seethamraju.html">Associate Professor Ravi Seethamraju</a>, <a href="https://www.sydney.edu.au/business/about/our-people/academic-staff/vijaya.murthy.html">Dr. Vijaya Murthy</a></li>
+        <li>Textbook: Albie Brooks, Nick Pawsey, Gillian Vesty, Rodney Dormer, Judy Oliver, Leslie G. Eldenburg, Vijaya Murthy, Management Accounting, 4th Edition</li>
       </ul>
       <h4>ACCT2011 Financial Accounting A (The University of Sydney, Spring 2021)</h4>
       <ul>
         <li>Instructor: <a href="https://www.sydney.edu.au/business/about/our-people/academic-staff/timothy-wang.html">Dr. Ganghua Wang</a></li>
+        <li>Textbook: Scott Henderson; Graham Peirson; Kathy Herbohn; Tracy Artiach; Bryan Howieson, Issues in Financial Accounting 16th Edition</li>
       </ul>
       <h4>ACCT1006 Accounting and Financial Management (The University of Sydney, Fall 2020)</h4>
       <ul>
         <li>Instructor: <a href="https://www.sydney.edu.au/business/about/our-people/academic-staff/janine.coupe.html">Ms Janine Coupe</a>, <a href="https://www.sydney.edu.au/business/about/our-people/academic-staff/mark-waddington.html">Mr Mark Waddington</a></li>
+        <li>Textbook: Shirley Carlon, Ngaire Kirk, Lily Wong, Rosina McAlpine, Lorena Mitrione, Chrisann Lee, Financial Accounting: Reporting, Analysis and Decision Making, 6th Edition</li>
       </ul>
       <h4>BUSS1030 Accounting, Business and Society (The University of Sydney, Fall 2019)</h4>
       <ul>
         <li>Instructor: <a href="https://www.sydney.edu.au/business/about/our-people/academic-staff/abdul-razeed.html">Dr. Abdul Razeed</a></li>
+        <li>Textbook: Peter Atrill, Eddie McLaney, and David Harvey, Accounting for Business Students, 1st Edition</li>
       </ul>
       
       <hr />
