--- a/education.html
+++ b/education.html
@@ -155,6 +155,7 @@
       <ul>
        <li>Instructor: <a href="https://sites.northwestern.edu/alexisarellano/">Prof. Alexis Orellana</a></li>
        <li>Textbook: Angrist, Joshua and Jorn-Steffen Pischke. 2009. Mostly Harmless Econometrics</li>
+       <li>Further Reading: Card, D. (1990). The impact of the Mariel boatlift on the Miami labor market. Ilr Review, 43(2), 245-257. Angrist, J. D., & Guryan, J. (2008). Does teacher testing raise teacher quality? Evidence from state certification requirements. Economics of Education Review, 27(5), 483-503.</li>
       </ul>
       <h4><b>Econ 5012: Microeconomic Analysis and Applications (The Chinese University of Hong Kong, Fall 2023)</b></h4>
       Master's course on Microeconomic theory.
