--- a/education.html
+++ b/education.html
@@ -128,7 +128,7 @@
       </ul>
       <h4><b>SE POL 420 Applied Public Finance (Northwestern University, Fall 2024)</b></h4>
       <ul>
-       <li>Instructor: <a href="https://sesp.northwestern.edu/people/faculty/derek-drayer.html">Dr. Derek Drayer</a></li>
+       <li>Instructor: <a href="https://sesp.northwestern.edu/people/faculty/john-olson.html">Prof. John Olson</a></li>
       </ul>
       <h4><b>SE POL 400 Causal Methods for Evaluating Policy (Northwestern University, Spring 2024)</b></h4>
       Master's course on causal infernece.
@@ -150,6 +150,7 @@
       <ul>
        <li>Instructor: <a href="https://sites.northwestern.edu/ogawa/">Prof. Scott Ogawa</a></li>
        <li>Textbook: Economics of Education, Lovenheim and Turner</li>
+       <li>Reference book: Angrist, J. D., & Guryan, J. (2008). Does teacher testing raise teacher quality? Evidence from state certification requirements. Economics of Education Review, 27(5), 483-503.</li>
       </ul>
       <h4><b>SE POL 401 Economics of Public Policy (Northwestern University, Summer 2024)</b></h4>
       <ul>
