--- a/education.html
+++ b/education.html
@@ -126,10 +126,14 @@
       <ul>
        <li>Instructor: <a href="https://sites.northwestern.edu/hoavu/hoavu/">Dr. Hoa Vu</a></li>
       </ul>
-      <h4><b>SE POL 420 Applied Public Finance (Northwestern University, Fall 2024)</b></h4>
+      <h4><b>SE POL 409 Economic Policy in Action (Northwestern University, Fall 2024)</b></h4>
       <ul>
        <li>Instructor: <a href="https://sesp.northwestern.edu/people/faculty/john-olson.html">Prof. John Olson</a></li>
       </ul>
+      <h4><b>SE POL 419 Digital Marketplaces and Economic Policy (Northwestern University, Fall 2024)</b></h4>
+      <ul>
+        <li>Instructor: <a href="https://sites.northwestern.edu/mischafisher/">Mr. Mischa Fisher</a></li>
+       </ul>
       <h4><b>SE POL 400 Causal Methods for Evaluating Policy (Northwestern University, Spring 2024)</b></h4>
       Master's course on causal infernece.
       <ul>
