new courses description

--- a/education.html
+++ b/education.html
@@ -123,14 +123,17 @@
       <hr />
       <h3>Economics & Policy</h3>
       <h4><b>SE POL 418 Economics of Immigration and Welfare (Northwestern University, Fall 2024)</b></h4>
+      This course aims to provide an in-depth examination of the theoretical concepts and empirical tools necessary to understand several key aspects of international migration, as well as the welfare implications of immigration for both host and home countries. We will be discussing economic theory and academic papers that have extensive amounts of data analysis.
       <ul>
        <li>Instructor: <a href="https://sites.northwestern.edu/hoavu/hoavu/">Dr. Hoa Vu</a></li>
       </ul>
       <h4><b>SE POL 409 Economic Policy in Action (Northwestern University, Fall 2024)</b></h4>
+      This course provides a deep discussion of theoretical concepts and empirical tools to understand the design and effects of economic policy from the local to the international level in a variety of areas such as education, healthcare, social security, environmental, and tax policy.
       <ul>
        <li>Instructor: <a href="https://sesp.northwestern.edu/people/faculty/john-olson.html">Prof. John Olson</a></li>
       </ul>
       <h4><b>SE POL 419 Digital Marketplaces and Economic Policy (Northwestern University, Fall 2024)</b></h4>
+      The course explores the intersecion of digital marketplaces, advanced data science, and economic poicy research.The course covers the design and optimization of marketplaces, including demand and pricing functions, growth and acquisition, retenion and chum modeling, and data science and engineering. In the second half, students apply marketplace concepts to economic research, learning about regression disconinuity designs, social and economic policy research, and featured research seminars. Through hands-on projects and presentations. Students develop a deep understanding of the complexities of digital marketplaces and their applications in economic policy research.
       <ul>
         <li>Instructor: <a href="https://sites.northwestern.edu/mischafisher/">Mr. Mischa Fisher</a></li>
        </ul>
