--- a/education.html
+++ b/education.html
@@ -308,6 +308,11 @@
       <ul>
         <li>Instructor: <a href="https://www.sydney.edu.au/business/about/our-people/academic-staff/tro.kortian.html">Dr. Tro Kortian</a>, <a href="https://www.sydney.edu.au/business/about/our-people/academic-staff/thomas-to.html">Dr. Thomas To</a>, <a href="https://www.sydney.edu.au/business/about/our-people/academic-staff/he.huang.html">Dr. He Huang</a>, <a href="https://www.linkedin.com/in/james-kennedy-4a80345b/?originalSubdomain=au">James Kennedy</a></li>
       </ul>
+      <h4>02838400: Behavior Finance (Peking University, Fall 2021)</h4>
+      <ul>
+        <li>Instructor: <a href="https://www.gsm.pku.edu.cn/faculty/jishen/">Prof. Ji Shen</a></li>
+        <li>Reference book: Burton G. Malkiel, A Random Walk Down Wall Street: The Time-Tested Strategy for Successful Investing, 12th Edition</li>
+      </ul>
       <h4>FINC3012: Derivative Securities (The University of Sydney, Fall 2022)</h4>
       <ul>
         <li>Instructor: <a href="https://www.sydney.edu.au/business/about/our-people/academic-staff/elvis.jarnecic.html">Dr. Elvis Jarnecic</a></li>
@@ -358,6 +363,16 @@
       
       <hr />
       <h3 style="margin-bottom:6px margin-top:6px">Commerce</h3>
+      <h4>E2800030 Management Science and Information Management (Peking University, Fall 2021)</h4>
+      <ul>
+        <li>Instructor: <a href="https://www.gsm.pku.edu.cn/faculty/wangcong/">Prof. Cong Wang</a></li>
+        <li>Textbook: Kenneth C. Laudon, Jane P.Laudon, Management Information Systems: Managing the Digital Firm, 15th Edition</li>
+      </ul>
+      <h4>02832690 Logistics and Supply Chain Management (Peking University, Fall 2021)</h4>
+      <ul>
+        <li>Instructor: <a href="https://www.gsm.pku.edu.cn/faculty/xzheng/">Prof. Xiaona Zheng</a></li>
+        <li>Textbook: Martin Christopher, Logistics & supply chain management</li>
+      </ul>
       <h4>BUSS1000 Future of Business (The University of Sydney, Fall 2019)</h4>
       <ul>
         <li>Instructor: <a href="https://www.sydney.edu.au/business/about/our-people/academic-staff/anish-purkayastha.html">Dr. Anish Purkayastha</a>, <a href="https://www.sydney.edu.au/business/about/our-people/academic-staff/steven-hitchcock.html">Dr. Steven Hitchcock</a></li>
@@ -367,6 +382,12 @@
         <li>This unit of study introduces students to the knowledge and skills required to successfully lead and influence people in an increasingly global and diverse workplace.</li>
       </ul>
 
+      <hr />
+      <h3 style="margin-bottom:6px margin-top:6px">Sports</h3>
+      <h4>04130210 Baseball (Peking University, Spring 2022)</h4>
+      <ul>
+        <li>Instructor: <a href="https://pe.pku.edu.cn/info/1037/9823.htm">Ms. Chenxi Jiao</a></li>
+      </ul>      
 
       </section>
     </div>
