add medicine & health part

--- a/education.html
+++ b/education.html
@@ -137,6 +137,11 @@
       <ul>
         <li>Instructor: <a href="https://sites.northwestern.edu/mischafisher/">Mr. Mischa Fisher</a></li>
        </ul>
+      <h4><b>SE POL 420 Applied Public Finance (Northwestern University, Fall 2024)</b></h4>
+      The course emphasizes the tools necessary to harness data to answer policy-relevant questions. Topics covered include the measurement of incidence or taxes and subsidies, empirical applications of theories for the provision of public goods, estimation of elasticities of taxable income and their implications for optimal tax-and-transfer policy, detecting and counteracting tax evasion and avoidance,and applications of fiscal federalism and tax competition.
+      <ul>
+        <li>Instructor: <a href="https://sesp.northwestern.edu/people/faculty/john-olson.html">Prof. John Olson</a></li>
+      </ul>
       <h4><b>SE POL 400 Causal Methods for Evaluating Policy (Northwestern University, Spring 2024)</b></h4>
       Master's course on causal infernece.
       <ul>
@@ -380,6 +385,21 @@
       <h4>BUSS2000 Leading and Influencing in Business (The University of Sydney, Spring 2022)</h4>
       <ul>
         <li>This unit of study introduces students to the knowledge and skills required to successfully lead and influence people in an increasingly global and diverse workplace.</li>
+      </ul>
+
+      <hr />
+      <h3 style="margin-bottom:6px margin-top:6px">Medicine & Health</h3>
+      <h4>OLET1616 The Science of Health and Wellbeing (The University of Sydney, Fall 2022)</h4>
+      <ul>
+        <li>Instructor: <a href="https://www.sydney.edu.au/medicine-health/about/our-people/academic-staff/rajshri-roy.html">Dr. Rajshri Roy</a></li>
+      </ul>
+      <h4>OLET1634 Anxiety and its Disorders (The University of Sydney, Fall 2020)</h4>
+      <ul>
+        <li>Instructor: <a href="https://www.sydney.edu.au/science/about/our-people/academic-staff/daniel-pearson.html">Dr. Daniel Pearson</a></li>
+      </ul>
+      <h4>OLET1504 Health Challenges: Diabetes (The University of Sydney, Fall 2020)</h4>
+      <ul>
+        <li>Instructor: <a href="https://www.sydney.edu.au/medicine-health/about/our-people/academic-staff/peter-thorn.html">Prof. Peter Thorn</a></li>
       </ul>
 
       <hr />
