--- a/education.html
+++ b/education.html
@@ -126,13 +126,20 @@
       This course aims to provide an in-depth examination of the theoretical concepts and empirical tools necessary to understand several key aspects of international migration, as well as the welfare implications of immigration for both host and home countries. We will be discussing economic theory and academic papers that have extensive amounts of data analysis.
       <ul>
        <li>Instructor: <a href="https://sites.northwestern.edu/hoavu/hoavu/">Dr. Hoa Vu</a></li>
+       <li>Reference book: Moser, Petra, Alessandra Voena, and Fabian Waldinger. 2013. “German Jewish Emigres and U.S. Invention.” American Economic Review; Giovanni Peri & Kevin Shih & Chad Sparber, 2015. "STEM Workers, H-1B Visas, and Productivity in US Cities," Journal of Labor Economics</li>
+      </ul>
+      <h4><b>SE POL 414 Strategic Behavior and Policy Analysis (Northwestern University, Fall 2024)</b></h4>
+      <ul>
+       <li>Instructor: <a href="https://sites.northwestern.edu/ogawa/">Prof. Scott Ogawa</a></li>
       </ul>
       <h4><b>SE POL 409 Economic Policy in Action (Northwestern University, Fall 2024)</b></h4>
-      This course provides a deep discussion of theoretical concepts and empirical tools to understand the design and effects of economic policy from the local to the international level in a variety of areas such as education, healthcare, social security, environmental, and tax policy.
+      This course aims to 1) provide a working knowledge of modern methods to evaluate economic policy responses and 2) practically apply these methods to analyze real-world policy issues, all within a macroeconomic lens. Topics covered include identifying causal effects in time-series data, using cross-sectional data to answer macroeconomic questions, and structural estimation of macroeconomic models. Applications for aggregate economic policy - including fiscal,monetary, and trade - are explored.
       <ul>
        <li>Instructor: <a href="https://sesp.northwestern.edu/people/faculty/john-olson.html">Prof. John Olson</a></li>
+       <li>Textbook: 	David Romer. 2018. Advanced Macroeconomics</li>
+       <li>Further Reading: Ramey, V. 2016. “Macroeconomic Shocks and Their Propagation.” Handbook of Macroeconomics, 2: 71-162</li>
       </ul>
-      <h4><b>SE POL 419 Digital Marketplaces and Economic Policy (Northwestern University, Fall 2024)</b></h4>
+      <!--h4><b>SE POL 419 Digital Marketplaces and Economic Policy (Northwestern University, Fall 2024)</b></h4>
       The course explores the intersecion of digital marketplaces, advanced data science, and economic poicy research.The course covers the design and optimization of marketplaces, including demand and pricing functions, growth and acquisition, retenion and chum modeling, and data science and engineering. In the second half, students apply marketplace concepts to economic research, learning about regression disconinuity designs, social and economic policy research, and featured research seminars. Through hands-on projects and presentations. Students develop a deep understanding of the complexities of digital marketplaces and their applications in economic policy research.
       <ul>
         <li>Instructor: <a href="https://sites.northwestern.edu/mischafisher/">Mr. Mischa Fisher</a></li>
@@ -141,7 +148,7 @@
       The course emphasizes the tools necessary to harness data to answer policy-relevant questions. Topics covered include the measurement of incidence or taxes and subsidies, empirical applications of theories for the provision of public goods, estimation of elasticities of taxable income and their implications for optimal tax-and-transfer policy, detecting and counteracting tax evasion and avoidance,and applications of fiscal federalism and tax competition.
       <ul>
         <li>Instructor: <a href="https://sesp.northwestern.edu/people/faculty/john-olson.html">Prof. John Olson</a></li>
-      </ul>
+      </ul-->
       <h4><b>SE POL 400 Causal Methods for Evaluating Policy (Northwestern University, Spring 2024)</b></h4>
       Master's course on causal infernece.
       <ul>
