new course description

--- a/education.html
+++ b/education.html
@@ -129,8 +129,11 @@
        <li>Reference book: Moser, Petra, Alessandra Voena, and Fabian Waldinger. 2013. “German Jewish Emigres and U.S. Invention.” American Economic Review; Giovanni Peri & Kevin Shih & Chad Sparber, 2015. "STEM Workers, H-1B Visas, and Productivity in US Cities," Journal of Labor Economics</li>
       </ul>
       <h4><b>SE POL 414 Strategic Behavior and Policy Analysis (Northwestern University, Fall 2024)</b></h4>
+      This course will apply economic models (including both game theory and market theory) toward understanding practical problems faced by both individuals and policymakers.
       <ul>
        <li>Instructor: <a href="https://sites.northwestern.edu/ogawa/">Prof. Scott Ogawa</a></li>
+       <li>Textbook: Dixit and Nalebluf. 2008. The Art of Strategy: A Game Theorist’s Guide to Success in Business and Life</li>
+       <li>Further Reading: Steven Pinker. 2021. Rationality</li>
       </ul>
       <h4><b>SE POL 409 Economic Policy in Action (Northwestern University, Fall 2024)</b></h4>
       This course aims to 1) provide a working knowledge of modern methods to evaluate economic policy responses and 2) practically apply these methods to analyze real-world policy issues, all within a macroeconomic lens. Topics covered include identifying causal effects in time-series data, using cross-sectional data to answer macroeconomic questions, and structural estimation of macroeconomic models. Applications for aggregate economic policy - including fiscal,monetary, and trade - are explored.
