add research part

--- a/research.html
+++ b/research.html
@@ -88,7 +88,8 @@
         <!--p>Fellow<br><a href="https://glabor.org/user/tyleransom/">Global Labor Organization (GLO)</a></p-->
     <h3><a href="https://BenedictXu.github.io/">Home</a></h3>
         <!--h3><a href="https://BenedictXu.github.io/research.html">Research</a></h3-->
-    <h3><a href="https://BenedictXu.github.io/research/CV.pdf">CV</a></h3>  
+    <h3><a href="https://BenedictXu.github.io/research/CV.pdf">CV</a></h3>
+    <h3><a href="https://BenedictXu.github.io/education.html">Education</a></h3>   
         <!--h3><a href="https://tyleransom.github.io/code.html">Code</a></h3--> 
         <!--h3><a href="https://BenedictXu.github.io/teaching.html">Teaching</a></h3--> 
         <!--h3><a href="https://BenedictXu.github.io/personal.html">Personal</a></h3-->
@@ -111,7 +112,7 @@
       </header>
       <section>
 
-    <h2><a id="recent-RRs-updated" class="anchor" href="#RRpapers" aria-hidden="true"><span class="octicon octicon-link"></span></a>Papers under Revision to Resubmit</h2>
+    <!--h2><a id="recent-RRs-updated" class="anchor" href="#RRpapers" aria-hidden="true"><span class="octicon octicon-link"></span></a>Papers under Revision to Resubmit</h2>
     <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://tyleransom.github.io/research/CollegeDropout2024Jan31.pdf">College Attrition and the Dynamics of Information Revelation</a> <br> with <a href="http://public.econ.duke.edu/~psarcidi/">Peter Arcidiacono</a>, <a href="https://sites.google.com/site/estebanmaucejo/">Esteban Aucejo</a>, and <a href="http://www.amaurel.net/">Arnaud Maurel</a> <br> <b>2nd Round Revised &amp; Resubmitted, <i>Journal of Political Economy</i></b> (updated Jan 31, 2024) <br><button class="accordion">
       Abstract
     </button>
@@ -121,10 +122,13 @@
     </button>
     <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> <a href="http://www.nber.org/papers/w22325">NBER Working Paper No. 22325</a> (June 2016) <br> <a href="https://www.iza.org/publications/dp/16585/college-attrition-and-the-dynamics-of-information-revelation">IZA Discussion Paper No. 16585</a> (November 2023) </p></div><br>
 
-    <hr>
+    <hr-->
 
     <h2><a id="recent-papers-updated" class="anchor" href="#workingpapers" aria-hidden="true"><span class="octicon octicon-link"></span></a>Working Papers</h2>
-    <p style="margin:0"> Coming soon. <br> <br> 
+    <p style="margin:0"> <b>Clearing the Smoke: Early-Life Exposure to Cigarette Taxes and Later-Life Old-Age Disability and Mortality</b> <br> with <a href="https://sites.northwestern.edu/hoavu/hoavu/">Dr. Hoa Vu</a>, <a href="https://scholar.google.com/citations?user=W7nnSssAAAAJ">Prof. Towhid Iqram Mahmood</a> and <a href="https://www.apsu.edu/directory/faculty/noghanibehambarih.php">Prof. Hamid Noghanibehambari</a><br><button class="accordion">
+      Abstract
+    </button>
+    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p>  This study examines the long-term impacts of early-life exposure to state-level adoption of cigarette taxes on disability and mortality outcomes in old age. Using data from the 1980-2000 decennial censuses and applying a two-way fixed effects model, we find that exposure to cigarette taxes during early life significantly reduces the likelihood of later-life cognitive and work-related disabilities. The effects are particularly pronounced among individuals over the age of 65, implying the latent influence of early life exposure to the policy change. Further analyses suggest improvements in educational attainment and socioeconomic status as potential pathways. We also observed modest but significant increases in longevity. These findings highlight the potential of cigarette tax policies to reduce disability outcomes and their associated burden on healthcare system in the long run.</p></div><br>
 
     <hr>
     <!--
@@ -600,33 +604,44 @@ doi = {10.1016/j.econedurev.2018.04.002}
     -->
     <h2><a id="works-in-progress" class="anchor" href="#workinprogress" aria-hidden="true"><span class="octicon octicon-link"></span></a>Works in Progress</h2>
 
-    <p style="margin:0"> <b>Beating the Heat: Temperature and Spatial Reallocation over the Long Run</b> <br> with <a href="https://www.christosmakridis.com/">Christos Makridis</a>. <br><button class="accordion">
+    <p style="margin:0"> <b>Local Leaders’ Behavior and Economy Performance</b> <br><button class="accordion">
       Abstract
     </button>
-    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> Does temperature affect real economic activity? Using the annual Current Population Survey between 1963 and 2015, we show that there is no association between temperature and earnings, hours, or output after controlling for time-invariant spatial heterogeneity and time-varying demographic factors. These results are robust to five separate sources of micro-data, different sampling horizons, functional forms, spatial measures of temperature, and subsets of the data. This paper studies the relationship between temperature and productivity across space and time. Motivated by these null results, we develop a spatial equilibrium model where temperature can affect not only firm productivity, but also individual locational choice. After calibrating the model, we use it to disentangle the role of reallocation versus actual productivity losses in the U.S. economy between 1980 and 2015. Nearly all of the variation is driven by reallocation. We subsequently use the model to evaluate a counterfactual climate scenario and recover a new spatial equilibrium for the U.S. economy by 2050. </p></div><br>
+    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> This study will undertake an empirical investigation into the behaviors of provincial mayors and their impacts on the economy across China. Employing a novel natural language processing technique known as BERTopic, my research team aims to identify mismatches within the political framework </p></div><br>
 
-    <p style="margin:0"> <b>The Role of Supply and Demand Factors in Explaining the Migration of College Majors</b> <br><button class="accordion">
+    <p style="margin:0"> <b>Class Composition, Peer Effects and Student Achievement
+      </b> <br><button class="accordion">
       Abstract
     </button>
-    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p>  This paper documents a new stylized fact about the United States labor market: internal migration rates are dramatically different across college majors. For some college majors, migration rates are even lower than those without a college degree. I relate major migration rates with majors' spatial concentration and find that a major's spatial concentration explains about one fourth of the cross-major variation in migration rates. With this descriptive evidence as a guide, I estimate a structural model of locational choice where college graduates have heterogeneous preferences---at the detailed major level---for living close to home, and for working in a location with a high concentration of their fellow majors. Using estimates of the structural model, I decompose the cross-major migration rates into supply and demand factors and find that supply factors (i.e. moving costs) explain the vast majority of differences in migration rates across majors. My findings underscore the difficulty in attracting college majors to a particular location using demand-side investments. My results also highlight the importance of place in determining the labor market outcomes of college majors.</p></div><br>
+    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> Coming Soon.</p></div><br>
 
-    <p style="margin:0"> <b>Minorities in STEM: The Role of Ability Revelation</b> <br> with <a href="http://www.nickchk.com/">Nick Huntington-Klein</a>. <br><button class="accordion">
+    <!--p style="margin:0"> <b>Minorities in STEM: The Role of Ability Revelation</b> <br> with <a href="http://www.nickchk.com/">Nick Huntington-Klein</a>. <br><button class="accordion">
       Abstract
     </button>
-    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> Coming soon.</p></div><br>
+    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> Coming soon.</p></div><br-->
 
     <hr>
 
     <h2><a id="works-in-progress" class="anchor" href="#workinprogress" aria-hidden="true"><span class="octicon octicon-link"></span></a>Research Experiences</h2>
 
-    <p style="margin:0"> <b>The Cigarette Tax and its Impact on Children’s Old-Age Disability</b> <br> with <a href="https://sites.northwestern.edu/hoavu/hoavu/">Dr. Hoa Vu</a>. </p><br>
+    <p style="margin:0"> <b>Applied Social Sciences Alliance (ASSA) Annual Conference 2025</b>, Hilton San Francisco Union Square</p><br> 
 
     <p style="margin:0"> <b>Recruitment Camp for Prospective PhD Students</b>, The Chinese University of Hong Kong</p><br> 
 
-    <p style="margin:0"> <b>A longitudinal field experiment on work team creativity in an extreme context,</b>, Peking University, Research Assistant</p><br> 
+    <p style="margin:0"> <b>A Longitudinal Field Experiment on Work Team Creativity in an Extreme Context,</b>, Peking University, Research Assistant</p><br> 
 
     <p style="margin:0"> <b>ESG Fund Analysis Project,</b>, The University of Sydney, Research Assistant</p><br>
 
+
+    <hr>
+
+    <h2><a id="works-in-progress" class="anchor" href="#workinprogress" aria-hidden="true"><span class="octicon octicon-link"></span></a>Referee</h2>
+
+    <p style="margin:0"> <b>PhD Referee</b> <br> <a href="https://sites.northwestern.edu/hoavu/hoavu/">Dr. Hoa Vu</a>, <a href="https://economics.northwestern.edu/people/directory/scott-ogawa.html">Prof. Scott Ogawa</a>, <a href="https://psychology.northwestern.edu/people/faculty/core/profiles/david-uttal.html">Prof. David Uttal</a></p><br>
+
+    <p style="margin:0"> <b>Master Referee</b> <br> <a href="https://www.gsm.pku.edu.cn/faculty/wangcong/">Prof. Cong Wang</a>, <a href="https://www.sydney.edu.au/business/about/our-people/academic-staff/steven-sommer.html" target="_blank">Dr. Steven Sommer</a>, <a href="https://www.sydney.edu.au/business/about/our-people/academic-staff/c-yu.html">Dr. Chuan Yu</a></p><br>
+
+    <p style="margin:0"> <b>Exchange Referee</b> <br> <a href="https://www.gsm.pku.edu.cn/faculty/lukas.hensel/">Prof. Lukas Hensel</a></p><br>
       
       </section>
     </div>
