--- a/education.html
+++ b/education.html
@@ -87,7 +87,7 @@
         <p>Research Assitant<br><a href="https://sesp.northwestern.edu/">School of Education And Social Policy, Northwestern University (SESP)</a></p>
         <!--p>Fellow<br><a href="https://glabor.org/user/tyleransom/">Global Labor Organization (GLO)</a></p-->
     <h3><a href="https://BenedictXu.github.io/">Home</a></h3>
-        <!--h3><a href="https://BenedictXu.github.io/research.html">Research</a></h3-->
+    <h3><a href="https://BenedictXu.github.io/research.html">Research</a></h3>
     <h3><a href="https://BenedictXu.github.io/research/CV.pdf">CV</a></h3>  
         <!--h3><a href="https://tyleransom.github.io/code.html">Code</a></h3--> 
         <!--h3><a href="https://BenedictXu.github.io/teaching.html">Teaching</a></h3--> 
