--- a/research.html
+++ b/research.html
@@ -628,9 +628,9 @@ doi = {10.1016/j.econedurev.2018.04.002}
 
     <p style="margin:0"> <b>Recruitment Camp for Prospective PhD Students</b>, The Chinese University of Hong Kong</p><br> 
 
-    <p style="margin:0"> <b>A Longitudinal Field Experiment on Work Team Creativity in an Extreme Context,</b>, Peking University, Research Assistant</p><br> 
+    <p style="margin:0"> <b>A Longitudinal Field Experiment on Work Team Creativity in an Extreme Context</b>, Peking University, Research Assistant</p><br> 
 
-    <p style="margin:0"> <b>ESG Fund Analysis Project,</b>, The University of Sydney, Research Assistant</p><br>
+    <p style="margin:0"> <b>ESG Fund Analysis Project</b>, The University of Sydney, Research Assistant</p><br>
 
 
     <hr>
