--- a/research.html
+++ b/research.html
@@ -626,7 +626,9 @@ doi = {10.1016/j.econedurev.2018.04.002}
 
     <p style="margin:0"> <b>Applied Social Sciences Alliance (ASSA) Annual Conference 2025</b>, Hilton San Francisco Union Square</p><br> 
 
-    <p style="margin:0"> <b>Recruitment Camp for Prospective PhD Students</b>, The Chinese University of Hong Kong</p><br> 
+    <p style="margin:0"> <b>Empirical Research on Standardization Conference 2024</b>, Pritzker School of Law, Northwestern University</p><br> 
+
+    <p style="margin:0"> <b>Recruitment Camp for Prospective PhD Students 2024</b>, The Chinese University of Hong Kong</p><br> 
 
     <p style="margin:0"> <b>A Longitudinal Field Experiment on Work Team Creativity in an Extreme Context</b>, Peking University, Research Assistant</p><br> 
 
