add referee and eliminate visiting number

--- a/education.html
+++ b/education.html
@@ -283,7 +283,7 @@
         <li>Textbook: <a href="https://www.stats.gov.cn/zs/tjwh/tjkw/tjzl/202302/t20230215_1907867.html">Python数据分析基础</a></li>
         <!--li><a href="https://ssri.duke.edu/people/ehd-scholars">Students</a></li-->
       </ul>
-      <h4>SE POL 408 Applied Data Science (Northwestern University,Summer 2024)</h4>
+      <h4>SE POL 408 Applied Data Science and Applications in Social Policy (Northwestern University, Summer 2024)</h4>
       <ul>
         <li>Instructor: <a href="https://sites.northwestern.edu/burhanogut1/">Dr. Burhan Ogut, </a><a href="https://sesp.northwestern.edu/people/faculty/ruhan-circi.html">Dr. Ruhan Circi Kizil</a></li>
         <li>Textbook: An Introduction to Statistical Learning by James, Witten, Hastie, Tibshirani [JWHT]</li>
