--- a/research.html
+++ b/research.html
@@ -639,7 +639,7 @@ doi = {10.1016/j.econedurev.2018.04.002}
 
     <h2><a id="works-in-progress" class="anchor" href="#workinprogress" aria-hidden="true"><span class="octicon octicon-link"></span></a>Referee</h2>
 
-    <p style="margin:0"> <b>PhD Referee</b> <br> <a href="https://sites.northwestern.edu/hoavu/hoavu/">Dr. Hoa Vu</a>, <a href="https://economics.northwestern.edu/people/directory/scott-ogawa.html">Prof. Scott Ogawa</a>, <a href="https://psychology.northwestern.edu/people/faculty/core/profiles/david-uttal.html">Prof. David Uttal</a></p><br>
+    <p style="margin:0"> <b>PhD Referee</b> <br> <a href="https://sites.northwestern.edu/hoavu/hoavu/">Dr. Hoa Vu</a>, <a href="https://economics.northwestern.edu/people/directory/scott-ogawa.html">Prof. Scott Ogawa</a>, <a href="https://psychology.northwestern.edu/people/faculty/core/profiles/david-uttal.html">Prof. David Uttal</a>, <a href="https://sesp.northwestern.edu/people/faculty/john-olson.html">Prof. John Olson</a>, <a href="https://sesp.northwestern.edu/people/faculty/ruhan-circi.html">Dr. Ruhan Circi</a></p><br>
 
     <p style="margin:0"> <b>Master Referee</b> <br> <a href="https://www.gsm.pku.edu.cn/faculty/wangcong/">Prof. Cong Wang</a>, <a href="https://www.sydney.edu.au/business/about/our-people/academic-staff/steven-sommer.html" target="_blank">Dr. Steven Sommer</a>, <a href="https://www.sydney.edu.au/business/about/our-people/academic-staff/c-yu.html">Dr. Chuan Yu</a></p><br>
 
