new page personal

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <h3><a href="https://BenedictXu.github.io/education.html">Education</a></h3>   
         <!--h3><a href="https://tyleransom.github.io/code.html">Code</a></h3--> 
         <!--h3><a href="https://BenedictXu.github.io/teaching.html">Teaching</a></h3--> 
-        <!--h3><a href="https://BenedictXu.github.io/personal.html">Personal</a></h3-->
+        <h3><a href="https://BenedictXu.github.io/personal.html">Personal</a></h3>
     <b>Social</b><br>
         <div class="social-row">
           <a href="mailto:benedict.xu2000@gmail.com" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a><br>
@@ -104,7 +104,6 @@
           <a href="https://www.linkedin.com/in/benedict-kewei-xu-852032211/" class="author-social" target="_blank"><i class="fa fa-fw fa-linkedin-square"></i> LinkedIn</a><br>
           <br>
         </div>
-        <br>
 
     <p><b>Contact:</b><br>Northwestern University<br>School of Education and Social Policy<br>Walter Annenberg Hall, 2120 Campus Drive<br>Evanston, Illinois 60208</p>
     <!--script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
