--- a/education.html
+++ b/education.html
@@ -91,7 +91,7 @@
     <h3><a href="https://BenedictXu.github.io/research/CV.pdf">CV</a></h3>  
         <!--h3><a href="https://tyleransom.github.io/code.html">Code</a></h3--> 
         <!--h3><a href="https://BenedictXu.github.io/teaching.html">Teaching</a></h3--> 
-        <!--h3><a href="https://BenedictXu.github.io/personal.html">Personal</a></h3-->
+        <h3><a href="https://BenedictXu.github.io/personal.html">Personal</a></h3>
     <b>Social</b><br>
         <div class="social-row">
           <a href="mailto:benedict_xu@tom.com" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a><br>
