--- a/research.html
+++ b/research.html
@@ -5,7 +5,7 @@
   <script src="https://use.fontawesome.com/baff6f55f5.js"></script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Tyler Ransom by tyleransom</title>
+    <title>Benedict Xu by tyleransom</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -92,7 +92,7 @@
     <h3><a href="https://BenedictXu.github.io/education.html">Education</a></h3>   
         <!--h3><a href="https://tyleransom.github.io/code.html">Code</a></h3--> 
         <!--h3><a href="https://BenedictXu.github.io/teaching.html">Teaching</a></h3--> 
-        <!--h3><a href="https://BenedictXu.github.io/personal.html">Personal</a></h3-->
+        <h3><a href="https://BenedictXu.github.io/personal.html">Personal</a></h3>
     <b>Social</b><br>
         <div class="social-row">
           <a href="mailto:benedict_xu@tom.com" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a><br>
@@ -623,6 +623,7 @@ doi = {10.1016/j.econedurev.2018.04.002}
     <hr>
 
     <h2><a id="works-in-progress" class="anchor" href="#workinprogress" aria-hidden="true"><span class="octicon octicon-link"></span></a>Research Experiences</h2>
+    <p style="margin:0"> <b>Pre-Admissions Welcome Event 2025 for Ph.D. program in Applied Economics</b>, Northeastern University</p><br>
 
     <p style="margin:0"> <b>Applied Social Sciences Alliance (ASSA) Annual Conference 2025</b>, Hilton San Francisco Union Square</p><br> 
 
